# maldev-rdi-loader

./: .gitignore  README.md
dll_poc/: CMakeLists.txt  main.c
minimal_rdi/dll_loader/: CMakeLists.txt  main.c
minimal_rdi/dll_poc/: CMakeLists.txt  main.c
minimal_rdi/sRDI_dll_loader/: CMakeLists.txt  main.c
minimal_rdi/sRDI_dll_loader/c/: peb.c
minimal_rdi/sRDI_dll_loader/h/: dll.h  peb.h  structs.h
minimal_rdi/sRDI_dll_loader/masm/: peb.masm
minimal_rdi/sRDI_dll_loader/src/h/: defs.h
sRDI_loader/: CMakeLists.txt  main.c
sRDI_loader/src/c/: peb.c
sRDI_loader/src/h/: defs.h  dll.h  peb.h  structs.h
simple_loader/: CMakeLists.txt  main.c
